# HexeTerminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui_config.h
examples/: CMakeLists.txt  imgui_freetype_ex.cpp  imgui_freetype_ex.h  imgui_impl_sdl.cpp
examples/dockerterm/: CMakeLists.txt  dockerterm.cpp
examples/fonts/: PLACE_FONTS_HERE
examples/simple/: CMakeLists.txt  simple.cpp
examples/terminal/: CMakeLists.txt  terminal.cpp
include/Hexe/: AutoHandle.h
include/Hexe/System/: IPipe.h  IProcess.h  IProcessFactory.h  Pipe.h  Process.h  ProcessFactory.h
include/Hexe/Terminal/: Boxdraw.h  EmojiGlyphRanges.h  IPseudoTerminal.h  ImGuiTerminal.h  PseudoTerminal.h  TerminalDisplay.h  TerminalEmulator.h  Types.h
src/: AutoHandle.cpp  ImGuiTerminal.colors.h  ImGuiTerminal.cpp  ImGuiTerminal.keys.cpp  ImGuiTerminal.keys.h  Pipe.win32.cpp  Process.cpp  Process.win32.cpp  ProcessFactory.cpp  PseudoTerminal.cpp  PseudoTerminal.win32.cpp  TerminalDisplay.cpp  TerminalEmulator.cpp  WindowsErrors.h  boxdraw.cpp  boxdraw_data.h  config.def.h  emoji_blocks.h  nonspacing.h  wide.h
tools/: gen-emoji-headers.py
